k8s/covid-app-deployment.yaml
# covid-app-service

kind: Service
apiVersion: v1
metadata:
  name: covid-app
spec:
  type: ClusterIP
  selector:
    app: covid-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080

---

kind: Deployment
apiVersion: apps/v1
metadata:
  name: covid-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: covid-app
  template:
    metadata:
      labels:
        app: covid-app
    spec:
      containers:
        - name: covid-app
          image: interviewprojectsregistry.azurecr.io/covid-app:latest-3
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 400m
              memory: 656Mi
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
      terminationGracePeriodSeconds: 150
